# walltz

./: .gitignore  CMakeLists.txt  COPYING  README.md  Walltz-0.1.0-x86_64.flatpak  org.walltz.walltz.desktop
.hermes/plans/: auto-gradient-suggestions.md  vignette-grain-features.md
flathub-submission/: org.walltz.walltz.yml
flatpak/: org.walltz.walltz.yml
flatpak-export-repo/: summary  summary.idx
flatpak-export-repo/refs/heads/app/org.walltz.walltz/x86_64/: master
scripts/: build-appimage.sh  build-portable-appimage.sh  verify-features.sh
src/: CMakeLists.txt  CollapsibleSection.qml  Main.qml  ThemedIcon.qml  WallpaperProcessor.cpp  WallpaperProcessor.h  icons.qrc  main.cpp  org.walltz.walltz.appdata.xml  org.walltz.walltz.metainfo.xml
